# c-learning

./: 1.qqq  CMakeLists.txt  Makefile  main.cpp  test.cpp  test.h
CD/: CMakeLists.txt  Cd.cc  Cd.h
SymbolTable/: SymbolTable.cc  SymbolTable.h
Worker/: BankAccount.cc  BankAccount.h  CMakeLists.txt  Worker0.cc  Worker0.h  brass.h  tabtenn0.cc  tabtenn0.h
math/: CMakeLists.txt  MathFunctions.cc  MathFunctions.h  box.h  hotel.cc  hotel.h
